--- a/write-up/references.bib
+++ b/write-up/references.bib
@@ -1,3 +1,65 @@
+@book{golub2013,
+  author    = {Gene H. Golub and Charles F. Van Loan},
+  title     = {Matrix Computations},
+  edition   = {4th},
+  publisher = {Johns Hopkins University Press},
+  year      = {2013}
+}
+
+@book{demmel1997,
+  author    = {James W. Demmel},
+  title     = {Applied Numerical Linear Algebra},
+  publisher = {SIAM},
+  year      = {1997}
+}
+
+@inproceedings{hong1981,
+  author    = {Jia-Wei Hong and H. T. Kung},
+  title     = {I/O complexity: The red-blue pebble game},
+  booktitle = {Proceedings of the thirteenth annual ACM symposium on Theory of computing},
+  pages     = {326--333},
+  year      = {1981}
+}
+
+@book{davis2006,
+  author    = {Timothy A. Davis},
+  title     = {Direct Methods for Sparse Linear Systems},
+  publisher = {SIAM},
+  year      = {2006}
+}
+
+@article{buluc2011,
+  author    = {Aydin Buluç and John R. Gilbert},
+  title     = {Parallel Sparse Matrix-Matrix Multiplication and Indexing: Implementation and Experiments},
+  journal   = {SIAM Journal on Scientific Computing},
+  volume    = {34},
+  number    = {4},
+  pages     = {C170--C209},
+  year      = {2012}
+}
+
+@phdthesis{ballard2014,
+  author    = {Grey Ballard},
+  title     = {Avoiding Communication in Dense Linear Algebra},
+  school    = {University of California, Berkeley},
+  year      = {2013}
+}
+
+@book{stonebraker2018,
+  editor    = {Michael L. Brodie},
+  title     = {Making Databases Work: The Pragmatic Wisdom of Michael Stonebraker},
+  publisher = {ACM Books},
+  year      = {2018}
+}
+
+@misc{dbta2026,
+  author    = {Rohan Gupta and Phillip Merrick},
+  title     = {9 Predictions for Cloud in 2026 - Database Trends and Applications},
+  howpublished = {\url{https://www.dbta.com/Editorial/News-Flashes/9-Predictions-for-Cloud-in-2026-172808.aspx}},
+  year      = {2025},
+  note      = {Accessed 2026-01-08}
+}
+
 @misc{psql,
   title        = {Postgresql Docs},
   howpublished = {\url{https://www.postgresql.org/docs/current/datatype-numeric.html}},
